feat(backend): POST /auctions
